Bug 1267909 - fix line heights to properly scale to requested size for color-bitmapped SFNTs. r=jfkthame

MozReview-Commit-ID: KJ0ixEj7ZiV